[package]
name = "smosummary"
version = "3.0.0"
authors = ["aray4iv3 <aray.4iv3@gmail.com>"]
edition = "2021"
description = "smosummary, but in rust."
repository = "https://github.com/aray4iv3/smosummary"
license = "MIT"

[[bin]]
name = "smosummary"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
libc = "0.2"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
